@@ -14,13 +14,13 @@ public interface EmailProcessor {
 	public EmailTemplateData getEmailTemplateData(Map<String, String[]> params);
 
 	public List<String> getAttachments();
-	
+
 	public String processEmailContentTemplate(Map<String, String[]> params);
-	
+
 	public Map<String, String[]> getAvailableFilesToAttach(String referenceId);
-	
+
 	public Map<String, String> sendEmail(Email email, WebRequest webRequest);
-	
+
 	public Collection<Map<String, String>> findContact(String hint);
 
 }
